# terrapins

./: .gitignore  BUILD.md  README.md  _build.py  readme_build_instructions.md  release_ffi_bindings.py  release_jni_bindings.py  release_terrapins.py  tests.py
.github/workflows/: build-native-linux.yml  build.yml
cpp/lib/: CMakeLists.txt
cpp/lib/include/: cli.hpp  hawkman.hpp  image.hpp  imp.hpp  results.hpp  settings.hpp  squirrel_inner.hpp  squirrel_settings.hpp
cpp/lib/src/: cli.cpp  hue_calculator.cpp  image.cpp  imp.cpp  results.cpp  settings.cpp  squirrel.cpp  squirrel_pw_results.cpp  squirrel_settings.cpp  threads.cpp
cpp/lib_tests/: CMakeLists.txt  cli_tests.cpp  histogram_tests.cpp  settings_tests.cpp  squirrel_tests.cpp  tests.cpp  utils.cpp  utils.hpp
cpp/tools/: CMakeLists.txt  corr_test.cpp  squirrel.cpp
guide/: csv_parsing.md  guide.md  include_filter.py  open_workflow.md  select_images_pathway.md  select_localisation_pathway.md
imagej/: pom.xml
imagej/rust_ffi/: Cargo.toml
imagej/rust_jni/: Cargo.toml
imagej/rust_jni/src/: lib.rs
integration/: main.py
native/: PROVENANCE.md
native/cpp/lib/: CMakeLists.txt
native/cpp/lib/include/: cli.hpp  consts.hpp  hawkman_inner.hpp  hue_calculator.hpp  image.hpp  imp.hpp  resizing.hpp  results.hpp  settings.hpp  squirrel.hpp  squirrel_inner.hpp  squirrel_parameters.hpp  squirrel_patch.hpp  squirrel_pw_results.hpp  squirrel_settings.hpp  threads.hpp  threshold_settings.hpp  zero.hpp
native/cpp/lib/src/: cli.cpp  hawkman.cpp  hue_calculator.cpp  image.cpp  imp.cpp  resizing.cpp  results.cpp  settings.cpp  squirrel.cpp  squirrel_patch.cpp  squirrel_settings.cpp
native/cpp/tools/: CMakeLists.txt  hawkman.cpp  squirrel.cpp
native/rust/: Cargo.toml
native/rust/f2i/: Cargo.toml
native/rust/frc_this/: Cargo.toml
native/rust/frc_this/src/: main.rs
native/rust/smlm-frc/: Cargo.toml  README.md
native/rust/smlm-frc/src/: config.rs  constants.rs  filters.rs  frc.rs  frc_result.rs  lib.rs  loess.rs  maths.rs  nans.rs  plotting.rs  resolution.rs  solver_options.rs  uncertainty_sampling.rs  utils.rs
native/rust/smlm-frc/src/analysis/: mod.rs
native/rust/smlm-frc/src/corrections/: fit_uncertainties.rs  fq.rs  hq.rs  mod.rs  nu.rs  q_estimation.rs
native/rust/smlm-frc/src/corrections/q_refinement/: mod.rs
native/rust/smlm-frc/src/thresholds/: half_bit.rs  mod.rs  one_seventh.rs  sigma_factor.rs
native/rust/smlm-imp/: Cargo.toml  README.md
native/rust/smlm-imp/src/: lib.rs  stats.rs  utils.rs
native/rust/smlm-imp/src/circles/: bresenham.rs  mod.rs
native/rust/smlm-imp/src/convolution/: mod.rs
native/rust/smlm-imp/src/filter/: mod.rs
native/rust/smlm-imp/src/images/: borrowed_image.rs  mod.rs  owned_image.rs  rgb_image.rs
native/rust/smlm-locs/: Cargo.toml  README.md
native/rust/smlm-locs/src/: allocated_localisation.rs  builder.rs  constants.rs  lib.rs
native/rust/smlm-locs/src/filters/: mod.rs
native/rust/smlm-locs/src/io/: csv.rs  mod.rs  parse_method.rs  settings.rs  thunderstorm.rs
native/rust/smlm-locs/src/split/: method.rs  mod.rs  settings.rs
native/rust/smlm-qa/: Cargo.toml  README.md
native/rust/smlm-qa/src/: constants.rs  error.rs  lib.rs  utils.rs
native/rust/smlm-qa/src/assessment/: assessment.rs  bias.rs  limiting_resolution.rs  mod.rs  outcome.rs  report.rs  sampling.rs  squirrel.rs
native/rust/smlm-qa/src/assessment/frc/: alignment.rs  blinking.rs  mod.rs  resolution.rs
native/rust/smlm-qa/src/assessment/frc/calibration/: mod.rs  sampling_ratio_0_005.rs  sampling_ratio_0_05.rs  sampling_ratio_0_5.rs  sampling_ratio_25.rs  sampling_ratio_5.rs
native/rust/smlm-qa/src/filesystem/: mod.rs
native/rust/smlm-qa/src/fs_extra/: mod.rs
native/rust/smlm-qa/src/io/: mod.rs
native/rust/smlm-qa/src/io/settings/: mod.rs  version_1.rs
native/rust/smlm-qa/src/io/zip/: mod.rs
native/rust/smlm-qa/src/results/: mod.rs
native/rust/smlm-qa/src/settings/: context.rs  data_generation.rs  equipment_settings.rs  frc_data.rs  frc_settings.rs  hawkman_settings.rs  images.rs  localisation_data.rs  localisations.rs  mod.rs  recon_settings.rs  setup.rs  squirrel_settings.rs  workflow.rs
native/rust/smlm-qa/src/settings/report/: bias.rs  blinking.rs  mod.rs  ratio.rs  sampling.rs  squirrel.rs
native/rust/smlm-qa/src/tools/: external.rs  mod.rs  psf_calculator.rs  renderer.rs  widefield_generator.rs
native/rust/smlm-qa/src/tools/frc/: mod.rs
native/rust/smlm-qa/src/tools/hawkman/: mod.rs  results.rs
native/rust/smlm-qa/src/tools/squirrel/: mod.rs  results.rs
native/rust/smlm-renderer/: Cargo.toml  README.md
native/rust/smlm-renderer/src/: config.rs  data_properties.rs  gaussian.rs  lib.rs  patch.rs  render_result.rs  utils.rs
native/rust/smlm-renderer/src/io/: mod.rs
native/rust/smlm-renderer/src/render_styles/: integral_renderer.rs  mod.rs  patch_utils.rs  single_point_patch_renderer.rs
native/rust/smlm-renderer/src/widefield/: mod.rs
native/rust/smlm-sig-proc/: Cargo.toml  README.md
native/rust/smlm-sig-proc/benches/: variance.rs
native/rust/smlm-sig-proc/src/: lib.rs  utils.rs
native/rust/smlm-sig-proc/src/convolution/: direct_convolution.rs  frequency_convolution.rs  mod.rs
native/rust/smlm-sig-proc/src/fft/: mod.rs
native/rust/smlm-sig-proc/src/filters/: mod.rs  tukey.rs
native/rust/smlm-sig-proc/src/stats/: fit.rs  mod.rs
native/rust/smlm-sig-proc/src/stats/gaussian/: box_muller.rs  mod.rs
native/rust/smlm-sig-proc/src/stats/histogram/: mod.rs
native/rust/smlm-sig-proc/src/stats/variance/: mod.rs  naive.rs  shifted.rs  two_pass.rs  welfords.rs
native/rust/smlm-tiff/: Cargo.toml  README.md
native/rust/smlm-tiff/src/: data_type.rs  image_data.rs  lib.rs  reader.rs  writer.rs
rust_ffi/: Cargo.toml
rust_ffi/src/: error.rs  image_store.rs  lib.rs  pu.rs  ui.rs
rust_jni/: Cargo.toml
rust_jni/src/: lib.rs
scripts/: build-jar.sh  build-native-linux.sh  build-native-macos.sh  build-native-windows.ps1  build-native.sh
smlm-terrapins/: LICENSE.txt  README.md  pyproject.toml
smlm-terrapins/tests/: test_command_line.py
(+321 files in other folders)
