[package]
name = "frc_this"
version = "0.8.0"
edition = "2021"

[dependencies]
clap = {version = "4.5", features = [ "derive" ]}
smlm-frc = {path = "../smlm-frc"}

tiff_wrap = {"git" = "https://github.com/Assessing-Quality-SMLM/tiff_wrap.git", tag="tiff_wrap_v0.1.0"}

[features]
plot = ["smlm-frc/plot"]
default=[]
