[package]
name = "smlm-qa"
version = "0.23.0"
edition = "2024"
description = "Assess the quality of SMLM data"
keywords = ["smlm", "assessment", "TERRAPINS", "quality-assessment"]
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
smlm-imp = "0.5"
smlm-locs = {path = "../smlm-locs"}
smlm-renderer = {path = "../smlm-renderer"}
smlm-frc = {path = "../smlm-frc"}

serde = { version = "1", features=["derive"]}
serde_json = { version = "1"}

smlm-tiff = "0.8"

time = {version = "0.3", features=["formatting"]}
walkdir = "2"
zip = "4.3"
